[gd_scene load_steps=17 format=3 uid="uid://b3jm5t2yjn8pd"]

[ext_resource type="FontFile" uid="uid://bleppcr266mfo" path="res://assets/UI/Font/Kenney Future.ttf" id="1_l10jr"]
[ext_resource type="Script" uid="uid://c3wi32xibg7tv" path="res://source/ui/mainMenu/starting_screen.gd" id="2_6l04n"]
[ext_resource type="Texture2D" uid="uid://bqmohg76n4h02" path="res://assets/UI/PNG/Red/Double/button_square_header_large_rectangle.png" id="2_6lpil"]
[ext_resource type="Texture2D" uid="uid://c4fxjsl6ysoos" path="res://assets/UI/PNG/Red/Double/button_square_header_small_rectangle_screws.png" id="3_mjld7"]
[ext_resource type="PackedScene" uid="uid://b4wjk4xstfmjx" path="res://source/ui/space_bg.tscn" id="3_whib7"]
[ext_resource type="Texture2D" uid="uid://l58qrod88jui" path="res://assets/UI/PNG/Grey/Double/button_square_header_small_square_screws.png" id="4_1yyqy"]
[ext_resource type="Texture2D" uid="uid://xk1add61y1xa" path="res://assets/UI/PNG/Grey/Default/bar_square_gloss_large.png" id="5_kotje"]
[ext_resource type="Texture2D" uid="uid://8ghqnlh1ek2m" path="res://assets/UI/PNG/Yellow/Double/bar_square_gloss_large.png" id="6_ppp0u"]
[ext_resource type="PackedScene" uid="uid://dd3mcaijpd7g7" path="res://source/ui/vehicle.tscn" id="8_hlv7e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mihib"]
texture = ExtResource("2_6lpil")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f3mee"]
texture = ExtResource("3_mjld7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ttqs8"]
texture = ExtResource("3_mjld7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_05tig"]
texture = ExtResource("4_1yyqy")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i3twp"]
texture = ExtResource("5_kotje")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vbigv"]
texture = ExtResource("6_ppp0u")

[sub_resource type="Theme" id="Theme_dtmfh"]
default_font = ExtResource("1_l10jr")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 5
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("1_l10jr")
Button/styles/hover = SubResource("StyleBoxTexture_mihib")
Button/styles/normal = SubResource("StyleBoxTexture_f3mee")
Button/styles/pressed = SubResource("StyleBoxTexture_ttqs8")
ItemList/colors/font_color = Color(1, 1, 1, 1)
ItemList/colors/font_hovered_color = Color(0.999999, 0.972682, 0.534705, 1)
ItemList/colors/font_outline_color = Color(0.435294, 0, 0, 1)
ItemList/colors/font_selected_color = Color(0, 0.749434, 0, 1)
ItemList/constants/outline_size = 3
ItemList/font_sizes/font_size = 24
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 32
Label/fonts/font = ExtResource("1_l10jr")
Panel/styles/panel = SubResource("StyleBoxTexture_05tig")
ProgressBar/constants/outline_size = 6
ProgressBar/styles/background = SubResource("StyleBoxTexture_i3twp")
ProgressBar/styles/fill = SubResource("StyleBoxTexture_vbigv")

[node name="StartingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dtmfh")
script = ExtResource("2_6l04n")

[node name="SpaceBG" parent="." instance=ExtResource("3_whib7")]

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_right = -640.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -114.5
offset_bottom = -42.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dtmfh")
theme_override_colors/font_shadow_color = Color(0.435294, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 22
theme_override_font_sizes/font_size = 64
text = "Deadline"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vehicle" parent="." instance=ExtResource("8_hlv7e")]

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 530.0
offset_top = 425.0
offset_right = 750.0
offset_bottom = 635.0
theme_override_constants/separation = 22

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_dtmfh")
toggle_mode = true
text = "Play"

[node name="TutorialButton" type="Button" parent="Buttons"]
layout_mode = 2
text = "tutorial"

[node name="OptionsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_dtmfh")
toggle_mode = true
text = "options"

[node name="SourceCodeButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = SubResource("Theme_dtmfh")
toggle_mode = true
text = "source"

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="Buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Buttons/SourceCodeButton" to="." method="_on_source_code_button_pressed"]
